<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerview_movie"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <ProgressBar
        android:id="@+id/pb_loading_indicator"
        android:layout_height="42dp"
        android:layout_width="42dp"
        android:layout_gravity="center"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/tv_connection_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/check_connection_message"
        android:textSize="24sp"
        android:layout_gravity="center"
        android:visibility="invisible"
        android:gravity="center_horizontal"
        android:layout_marginBottom="35dp"/>

    <Button
        android:id="@+id/button_retry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/retry_button_name"
        android:layout_marginTop="35dp"
        android:layout_gravity="center"
        android:visibility="gone"/>

    <ProgressBar
        android:id="@+id/pb_btn_loading_indicator"
        android:layout_height="42dp"
        android:layout_width="42dp"
        android:layout_marginTop="35dp"
        android:layout_gravity="center"
        android:visibility="invisible" />

    <ImageView
        android:id="@+id/image_fix"
        android:src="@drawable/ic_fix"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:visibility="invisible"
        android:layout_marginBottom="45dp"/>

    <TextView
        android:id="@+id/tv_error_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/error_message"
        android:textSize="24sp"
        android:layout_gravity="center"
        android:visibility="invisible"
        android:gravity="center_horizontal"
        android:layout_marginTop="45dp"/>

</FrameLayout>